Start actually using new api spec
