# libTba/src/main/java/com/thebluealliance/api/model/IDistrictTeam.java
@@ -1,0 +1,161 @@
+/**
+ * The Blue Alliance API
+ * Access data about the FIRST Robotics Competition
+ *
+ * OpenAPI spec version: 2
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+
+package com.thebluealliance.api.model;
+
+import java.util.Objects;
+import com.google.gson.annotations.SerializedName;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import javax.annotation.Nullable;
+
+
+/**
+ * DistrictTeam
+ */
+@javax.annotation.Generated(value = "class io.swagger.codegen.languages.JavaClientCodegen", date = "2016-10-07T16:42:11.254-04:00")
+public interface IDistrictTeam   {
+
+
+   /**
+   * Event code for the district championship
+   * @return cmpKey
+  **/
+  @ApiModelProperty(example = "null", value = "Event code for the district championship")
+  @Nullable
+  public String getCmpKey();
+
+  public void setCmpKey(String cmpKey);
+
+
+
+   /**
+   * Points earned at the district championship
+   * @return cmpPoints
+  **/
+  @ApiModelProperty(example = "null", value = "Points earned at the district championship")
+  @Nullable
+  public Integer getCmpPoints();
+
+  public void setCmpPoints(Integer cmpPoints);
+
+
+
+   /**
+   * Event code for the first qualifying event
+   * @return event1Key
+  **/
+  @ApiModelProperty(example = "null", value = "Event code for the first qualifying event")
+  @Nullable
+  public String getEvent1Key();
+
+  public void setEvent1Key(String event1Key);
+
+
+
+   /**
+   * Event code for the second qualifying event
+   * @return event2Key
+  **/
+  @ApiModelProperty(example = "null", value = "Event code for the second qualifying event")
+  @Nullable
+  public String getEvent2Key();
+
+  public void setEvent2Key(String event2Key);
+
+
+
+   /**
+   * Points earned at the second qualifying event
+   * @return event2Points
+  **/
+  @ApiModelProperty(example = "null", value = "Points earned at the second qualifying event")
+  @Nullable
+  public Integer getEvent2Points();
+
+  public void setEvent2Points(Integer event2Points);
+
+
+
+   /**
+   * Unique key for this team@district. Formatted like <year><districtshort>_<teamKey>
+   * @return key
+  **/
+  @ApiModelProperty(example = "null", required = true, value = "Unique key for this team@district. Formatted like <year><districtshort>_<teamKey>")
+  
+  public String getKey();
+
+  public void setKey(String key);
+
+
+
+   /**
+   * Timestamp this model was last modified
+   * @return lastModified
+  **/
+  @ApiModelProperty(example = "null", value = "Timestamp this model was last modified")
+  @Nullable
+  public Long getLastModified();
+
+  public void setLastModified(Long lastModified);
+
+
+
+   /**
+   * Placing of this team
+   * @return rank
+  **/
+  @ApiModelProperty(example = "null", value = "Placing of this team")
+  @Nullable
+  public Integer getRank();
+
+  public void setRank(Integer rank);
+
+
+
+   /**
+   * How many points this team gets by nature of their age
+   * @return rookiePoints
+  **/
+  @ApiModelProperty(example = "null", value = "How many points this team gets by nature of their age")
+  @Nullable
+  public Integer getRookiePoints();
+
+  public void setRookiePoints(Integer rookiePoints);
+
+
+
+   /**
+   * Total number of points this team has earned
+   * @return totalPoints
+  **/
+  @ApiModelProperty(example = "null", value = "Total number of points this team has earned")
+  @Nullable
+  public Integer getTotalPoints();
+
+  public void setTotalPoints(Integer totalPoints);
+
+}
+
